fix DT-1470, fix word break in extended nav items for firefox

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -267,9 +267,14 @@ footer.bk-footer span {
     }
 }
 
-.widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
+.widget.extendednavigation ul li a,
+.widget.extendednavigation ul li.folder .text {
   display: block;
   padding: 12px 25px;
+}
+
+.widget .extendednavigation ul li.folder .text {
+  word-break: normal;
 }
 
 .widget.extendednavigation ul li a:hover {
